--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -1,22 +1,24 @@
 $mainMod = SUPER
 
-# launch
+# ────────────── launch ──────────────
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, E, exec, thunar
 
-# window / system
+# ─────────── window / system ─────────
 bind = $mainMod, Q, killactive
+bind = $mainMod, F, togglefloating, active
 bind = $mainMod SHIFT, R, reload
 bind = $mainMod SHIFT, Q, exit
 bind = $mainMod, ?, exec, ~/.config/hypr/scripts/show-keybinds.sh
 
-# workspaces
+# ───────────── workspaces ────────────
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
+
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 
-# utilities
+# ───────────── utilities ─────────────
 bind = $mainMod, V, exec, pavucontrol
 bind = $mainMod, L, exec, hyprlock
