--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -1,4 +1,20 @@
+# autostart.conf
+# programs to start on launch
+
+# bar
 exec-once = waybar
+
+# wallpaper
 exec-once = hyprpaper
-exec-once = nm-applet --indicator
+
+# idle manager
+exec-once = hypridle
+
+# clipboard manager
+exec-once = wl-paste --watch cliphist store
+
+# authentication agent
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+
+# network manager applet
+exec-once = nm-applet --indicator
