--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -1,3 +1,6 @@
+# keybinds.conf
+# keybindings configuration
+
 $mainMod = SUPER
 
 # ────────────── launch ──────────────
@@ -11,14 +14,36 @@ bind = $mainMod, F, togglefloating, active
 bind = $mainMod SHIFT, R, reload
 bind = $mainMod SHIFT, Q, exit
 bind = $mainMod, ?, exec, ~/.config/hypr/scripts/show-keybinds.sh
+bind = $mainMod, L, exec, hyprlock
 
 # ───────────── workspaces ────────────
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
 
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+
+# ───────────── audio / media ─────────────
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
+bind = , XF86AudioLowerVolume, exec, pamixer -d 5
+bind = , XF86AudioMute, exec, pamixer -t
+bind = , XF86AudioMicMute, exec, pamixer --default-source -t
+
+# ───────────── brightness ─────────────
+bind = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+
+# ───────────── screenshot ─────────────
+# print: full screen, shift+print: region
+bind = , Print, exec, ~/.config/hypr/scripts/screenshot.sh full
+bind = SHIFT, Print, exec, ~/.config/hypr/scripts/screenshot.sh region
+
+# ───────────── clipboard ─────────────
+bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # ───────────── utilities ─────────────
-bind = $mainMod, V, exec, pavucontrol
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod SHIFT, V, exec, pavucontrol
