--- a/config/wofi/config
+++ b/config/wofi/config
@@ -1,2 +1,13 @@
+# wofi config
+# minimal launcher settings
+
+mode=drun
 show=drun
 width=500
+height=300
+always_parse_args=true
+show_all=false
+print_command=true
+layer=overlay
+insensitive=true
+prompt=Search...
