--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -38,7 +38,7 @@ label {
     text = $TIME
     color = rgba(200, 200, 200, 1.0)
     font_size = 64
-    font_family = JetBrains Mono Nerd Font
+    font_family = JetBrains Mono
     position = 0, 80
     halign = center
     valign = center
