--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -11,7 +11,6 @@ bind = $mainMod, E, exec, thunar
 # ─────────── window / system ─────────
 bind = $mainMod, Q, killactive
 bind = $mainMod, F, togglefloating, active
-bind = $mainMod SHIFT, R, reload
 bind = $mainMod SHIFT, Q, exit
 bind = $mainMod, L, exec, hyprlock
 
@@ -20,11 +19,21 @@ bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
 
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
 bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
 
 # ───────────── audio / media ─────────────
 bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
