--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -18,3 +18,6 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # network manager applet
 exec-once = nm-applet --indicator
+
+# notification daemon
+exec-once = dunst
