--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,8 +1,7 @@
 # hyprpaper.conf
 # default wallpaper configuration
 
-preload = $HOME/.config/hypr/wallpapers/default.png
-wallpaper = ,$HOME/.config/hypr/wallpapers/default.png
+# configuration managed by scripts/init-wallpaper.sh
 
 # dummy entry to prevent errors if no wallpaper is set yet
 splash = false
