--- a/config/hypr/autostart.conf
+++ b/config/hypr/autostart.conf
@@ -5,7 +5,7 @@
 exec-once = waybar
 
 # wallpaper
-exec-once = hyprpaper
+exec-once = ~/.config/hypr/scripts/init-wallpaper.sh
 
 # idle manager
 exec-once = hypridle
