--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,2 +1,65 @@
-font_family JetBrains Mono
-font_size 11
+# ╭────────────╮
+# │    FONTS   │
+# ╰────────────╯
+font_family      JetBrains Mono Nerd Font
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
+font_size 12.0
+# nice rendering
+disable_ligatures never
+
+# ╭────────────╮
+# │   CURSOR   │
+# ╰────────────╯
+cursor_shape beam
+cursor_blink_interval -1
+cursor_stop_blinking_after 15.0
+
+# ╭────────────╮
+# │   MOUSE    │
+# ╰────────────╯
+mouse_hide_wait 2.0
+url_style curly
+open_url_with default
+copy_on_select yes
+
+# ╭────────────╮
+# │   WINDOW   │
+# ╰────────────╯
+remember_window_size  no
+initial_window_width  1200
+initial_window_height 800
+
+# Transparency and blur
+background_opacity 0.85
+# Note: blur is controlled by the compositor (Hyprland), but this enables the look.
+
+# Spacing
+window_padding_width 15
+
+# Decor
+hide_window_decorations yes
+confirm_os_window_close 0
+
+# ╭────────────╮
+# │     TAB    │
+# ╰────────────╯
+tab_bar_style powerline
+tab_powerline_style slanted
+tab_bar_edge top
+tab_bar_margin_width 0.0
+tab_bar_margin_height 0.0 0.0
+
+# ╭────────────╮
+# │  ADVANCED  │
+# ╰────────────╯
+sync_to_monitor yes
+enable_audio_bell no
+window_alert_on_bell yes
+
+# ╭────────────╮
+# │    THEME   │
+# ╰────────────╯
+include theme.conf
