--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -3,3 +3,11 @@ windowrulev2 = center, title:^(Open File|Save File|Choose File)$
 
 windowrulev2 = float, class:^(pavucontrol|nm-connection-editor)$
 windowrulev2 = center, class:^(pavucontrol|nm-connection-editor)$
+
+# ────────────────── Wofi ──────────────────
+# Enable blur behind wofi
+layerrule = blur, wofi
+# Fix ugly jagged lines around rounded corners
+layerrule = ignorezero, wofi
+# Dim the rest of the screen when wofi is open
+layerrule = dimaround, wofi
