--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -6,6 +6,6 @@ windowrulev2 = center, class:^(pavucontrol|nm-connection-editor)$
 
 # ────────────────── Wofi ──────────────────
 # Enable blur behind wofi
-layerrule = blur,wofi
-layerrule = ignorezero,wofi
-layerrule = dimaround,wofi
+layerrule = blur,^(wofi)$
+layerrule = ignorezero,^(wofi)$
+layerrule = dimaround,^(wofi)$
