--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -4,8 +4,7 @@ windowrulev2 = center, title:^(Open File|Save File|Choose File)$
 windowrulev2 = float, class:^(pavucontrol|nm-connection-editor)$
 windowrulev2 = center, class:^(pavucontrol|nm-connection-editor)$
 
-# ────────────────── Wofi ──────────────────
-# Enable blur behind wofi
-layerrule = blur,^(wofi)$
-layerrule = ignorezero,^(wofi)$
-layerrule = dimaround,^(wofi)$
+# Wofi Rules
+layerrule = blur, wofi
+layerrule = ignorezero, wofi
+# layerrule = dimaround, wofi
