--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -1,78 +1,77 @@
 # vim:ft=kitty
 
-## name:     Catppuccin-Mocha
-## author:   Pocco81 (https://github.com/Pocco81)
+## name:     Batman (Gotham)
+## author:   v9mirza
 ## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
-## blurb:    Soothing pastel theme for the high-spirited!
+## blurb:    I am Vengeance.
 
 # The basic colors
-foreground              #CDD6F4
-background              #1E1E2E
-selection_foreground    #1E1E2E
-selection_background    #F5E0DC
+foreground              #ffffff
+background              #0a0a0a
+selection_foreground    #000000
+selection_background    #FFD700
 
 # Cursor colors
-cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
+cursor                  #FFD700
+cursor_text_color       #000000
 
 # URL underline color when hovering with mouse
-url_color               #F5E0DC
+url_color               #FFD700
 
 # Kitty window border colors
-active_border_color     #B4BEFE
-inactive_border_color   #6C7086
-bell_border_color       #F9E2AF
+active_border_color     #FFD700
+inactive_border_color   #333333
+bell_border_color       #FF0000
 
 # OS Window titlebar colors
 wayland_titlebar_color system
 macos_titlebar_color system
 
 # Tab bar colors
-active_tab_foreground   #11111B
-active_tab_background   #CBA6F7
-inactive_tab_foreground #CDD6F4
-inactive_tab_background #181825
-tab_bar_background      #11111B
+active_tab_foreground   #000000
+active_tab_background   #FFD700
+inactive_tab_foreground #888888
+inactive_tab_background #1a1a1a
+tab_bar_background      #000000
 
 # Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
-mark1_background #B4BEFE
-mark2_foreground #1E1E2E
-mark2_background #CBA6F7
-mark3_foreground #1E1E2E
-mark3_background #74C7EC
+mark1_foreground #000000
+mark1_background #FFD700
+mark2_foreground #000000
+mark2_background #ffffff
+mark3_foreground #000000
+mark3_background #333333
 
 # The 16 terminal colors
 
 # black
-color0 #45475A
-color8 #585B70
+color0 #000000
+color8 #333333
 
 # red
-color1 #F38BA8
-color9 #F38BA8
+color1 #ff3333
+color9 #ff3333
 
 # green
-color2  #A6E3A1
-color10 #A6E3A1
+color2  #2AD2C9
+color10 #2AD2C9
 
-# yellow
-color3  #F9E2AF
-color11 #F9E2AF
+# yellow (The Signal)
+color3  #FFD700
+color11 #FFD700
 
 # blue
-color4  #89B4FA
-color12 #89B4FA
+color4  #2472c8
+color12 #2472c8
 
 # magenta
-color5  #F5C2E7
-color13 #F5C2E7
+color5  #885588
+color13 #885588
 
 # cyan
-color6  #94E2D5
-color14 #94E2D5
+color6  #338888
+color14 #338888
 
 # white
-color7  #BAC2DE
-color15 #A6ADC8
+color7  #ffffff
+color15 #ffffff
