--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -3,4 +3,6 @@ general {
   gaps_out = 10
   border_size = 2
   layout = dwindle
+  col.active_border = rgb(FFD700) rgb(888888) 45deg
+  col.inactive_border = rgb(111111)
 }
