--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -3,6 +3,6 @@ general {
   gaps_out = 10
   border_size = 2
   layout = dwindle
-  col.active_border = rgb(FFD700) rgb(888888) 45deg
+  col.active_border = rgb(ffffff) rgb(555555) 45deg
   col.inactive_border = rgb(111111)
 }
