--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -1,77 +1,65 @@
 # vim:ft=kitty
 
-## name:     Batman (Gotham)
+## name:     Dark Knight (Tactical)
 ## author:   v9mirza
 ## license:  MIT
-## blurb:    I am Vengeance.
+## blurb:    Does it come in black?
 
 # The basic colors
 foreground              #ffffff
-background              #0a0a0a
-selection_foreground    #000000
-selection_background    #FFD700
+background              #000000
+selection_foreground    #ffffff
+selection_background    #444444
 
 # Cursor colors
-cursor                  #FFD700
+cursor                  #ffffff
 cursor_text_color       #000000
 
 # URL underline color when hovering with mouse
-url_color               #FFD700
+url_color               #aaaaaa
 
 # Kitty window border colors
-active_border_color     #FFD700
+active_border_color     #aaaaaa
 inactive_border_color   #333333
-bell_border_color       #FF0000
-
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
+bell_border_color       #aaaaaa
 
 # Tab bar colors
 active_tab_foreground   #000000
-active_tab_background   #FFD700
+active_tab_background   #aaaaaa
 inactive_tab_foreground #888888
-inactive_tab_background #1a1a1a
+inactive_tab_background #111111
 tab_bar_background      #000000
-
-# Colors for marks (marked text in the terminal)
-mark1_foreground #000000
-mark1_background #FFD700
-mark2_foreground #000000
-mark2_background #ffffff
-mark3_foreground #000000
-mark3_background #333333
 
 # The 16 terminal colors
 
 # black
 color0 #000000
-color8 #333333
+color8 #444444
 
-# red
-color1 #ff3333
-color9 #ff3333
+# red (Subtle Red for errors)
+color1 #cc3333
+color9 #ff4444
 
-# green
-color2  #2AD2C9
-color10 #2AD2C9
+# green (Tactical Green for success)
+color2  #44aa44
+color10 #55bb55
 
-# yellow (The Signal)
-color3  #FFD700
-color11 #FFD700
+# yellow (Muted Gold)
+color3  #aaaa44
+color11 #cccc55
 
-# blue
-color4  #2472c8
-color12 #2472c8
+# blue (Slate Blue)
+color4  #4466aa
+color12 #6688cc
 
-# magenta
+# magenta (Greyish Purple)
 color5  #885588
-color13 #885588
+color13 #aa66aa
 
-# cyan
-color6  #338888
-color14 #338888
+# cyan (Steel Cyan)
+color6  #448888
+color14 #66aabb
 
 # white
-color7  #ffffff
+color7  #dddddd
 color15 #ffffff
