--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,45 +1,77 @@
 # hyprlock.conf
-# minimal lockscreen configuration
+# Dark Knight Edition
 
 general {
     no_fade_in = true
     no_fade_out = true
     hide_cursor = false
+    grace = 0
+    disable_loading_bar = true
 }
 
+# The Background (Batmobile)
 background {
     monitor =
-    path = screenshot
-    color = rgba(25, 20, 20, 1.0)
-    blur_passes = 2 # 0 disables blurring
-    blur_size = 7
+    path = ~/.config/hypr/wallpapers/Batmobile.jpg
+    blur_passes = 0 # No blur for sharp tactical look
+    color = rgba(0, 0, 0, 1.0)
 }
 
+# The Time (Big & Bold)
+label {
+    monitor =
+    text = $TIME
+    color = rgba(255, 255, 255, 1.0)
+    font_size = 120
+    font_family = JetBrains Mono ExtraBold
+    position = 0, 100
+    halign = center
+    valign = center
+    shadow_passes = 2
+    shadow_size = 3
+    shadow_color = rgb(0,0,0)
+}
+
+# The Date
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +"%A, %B %d")"
+    color = rgba(200, 200, 200, 1.0)
+    font_size = 25
+    font_family = JetBrains Mono Light
+    position = 0, 0
+    halign = center
+    valign = center
+    shadow_passes = 1
+}
+
+# The Input Field (Tactical)
 input-field {
     monitor =
-    size = 200, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = false
-    outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
-    fade_on_empty = true
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
+    size = 250, 50
+    outline_thickness = 2
+    dots_size = 0.2
+    dots_spacing = 0.2
+    dots_center = true
+    outer_color = rgba(255, 255, 255, 0.5)
+    inner_color = rgba(0, 0, 0, 0.5)
+    font_color = rgb(255, 255, 255)
+    fade_on_empty = false
+    placeholder_text = <i>SECURITY CLEARANCE...</i>
     hide_input = false
-    position = 0, -20
+    position = 0, -100
     halign = center
     valign = center
 }
 
+# Status Label
 label {
     monitor =
-    text = $TIME
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 64
+    text = SYSTEM LOCKED
+    color = rgba(255, 255, 255, 0.6)
+    font_size = 12
     font_family = JetBrains Mono
-    position = 0, 80
+    position = 0, -150
     halign = center
     valign = center
 }
