--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,3 +6,4 @@ source = ~/.config/hypr/general.conf
 source = ~/.config/hypr/keybinds.conf
 source = ~/.config/hypr/rules.conf
 source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/animations.conf
