--- a/config/hypr/animations.conf
+++ b/config/hypr/animations.conf
@@ -1,21 +1,22 @@
 # animations.conf
-# Tactical Snappy Animations
+# Cinematic Smooth Animations
+# "The Dark Knight" - Fluid Movement
 
 animations {
     enabled = true
 
     # Bezier Curves
-    # "Tactical": Sharp start, solid end. No bounce.
-    bezier = tactical, 0.05, 0.9, 0.1, 1.05
+    # "Cinematic": Smooth ease-out. Not too snappy, not too floaty. Heavy but fluid.
+    bezier = cinematic, 0.7, 0, 0.1, 1
 
-    # Windows
-    animation = windows, 1, 3, tactical
-    animation = windowsOut, 1, 3, tactical, popin 80%
-    animation = windowsMove, 1, 3, tactical
+    # Windows (Slower, more deliberate)
+    animation = windows, 1, 6, cinematic
+    animation = windowsOut, 1, 6, cinematic, popin 80%
+    animation = windowsMove, 1, 6, cinematic
 
-    # Fade (Very fast)
-    animation = fade, 1, 2, tactical
+    # Fade
+    animation = fade, 1, 5, cinematic
 
-    # Workspaces (Slide smoothly but famously fast)
-    animation = workspaces, 1, 3, tactical, slide
+    # Workspaces (Longer slide for better context)
+    animation = workspaces, 1, 6, cinematic, slide
 }
