--- a/config/hypr/animations.conf
+++ b/config/hypr/animations.conf
@@ -1,22 +1,19 @@
 # animations.conf
-# Cinematic Smooth Animations
-# "The Dark Knight" - Fluid Movement
+# Standard Hyprland Defaults (The "Good" ones)
 
 animations {
     enabled = true
 
-    # Bezier Curves
-    # "Cinematic": Smooth ease-out. Not too snappy, not too floaty. Heavy but fluid.
-    bezier = cinematic, 0.7, 0, 0.1, 1
+    # Default Bezier (The famous "overshot" curve)
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    # Windows (Slower, more deliberate)
-    animation = windows, 1, 6, cinematic
-    animation = windowsOut, 1, 6, cinematic, popin 80%
-    animation = windowsMove, 1, 6, cinematic
-
-    # Fade
-    animation = fade, 1, 5, cinematic
-
-    # Workspaces (Longer slide for better context)
-    animation = workspaces, 1, 6, cinematic, slide
+    # Windows
+    animation = windows, 1, 7, myBezier
+    animation = windowsOut, 1, 7, default, popin 80%
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    
+    # Workspaces
+    animation = workspaces, 1, 6, default
 }
