--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -12,7 +12,7 @@ bind = $mainMod, E, exec, thunar
 bind = $mainMod, Q, killactive
 bind = $mainMod, F, togglefloating, active
 bind = $mainMod SHIFT, Q, exit
-bind = $mainMod, T, exec, ~/.config/hypr/scripts/theme-toggle.sh
+bind = $mainMod, L, exec, hyprlock
 
 # ───────────── workspaces ────────────
 bind = $mainMod, 1, workspace, 1
