--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,77 +1,96 @@
 # hyprlock.conf
-# Dark Knight Edition
+# "The Void" - Modern Black Aesthetic
 
 general {
     no_fade_in = true
     no_fade_out = true
-    hide_cursor = false
+    hide_cursor = true
     grace = 0
     disable_loading_bar = true
 }
 
-# The Background (Batmobile)
+# 1. Background (The Void)
 background {
     monitor =
-    path = ~/.config/hypr/wallpapers/Batmobile.jpg
-    blur_passes = 0 # No blur for sharp tactical look
     color = rgba(0, 0, 0, 1.0)
+    blur_passes = 0
 }
 
-# The Time (Big & Bold)
+# 2. Time (Massive, Bottom-Left)
 label {
     monitor =
-    text = $TIME
+    text = cmd[update:1000] echo "$(date +"%H:%M")"
     color = rgba(255, 255, 255, 1.0)
-    font_size = 120
+    font_size = 200
     font_family = JetBrains Mono ExtraBold
-    position = 0, 100
-    halign = center
-    valign = center
-    shadow_passes = 2
-    shadow_size = 3
-    shadow_color = rgb(0,0,0)
+    position = 50, 0
+    halign = left
+    valign = bottom
 }
 
-# The Date
+# 3. Date (Above Time)
 label {
     monitor =
     text = cmd[update:1000] echo "$(date +"%A, %B %d")"
-    color = rgba(200, 200, 200, 1.0)
+    color = rgba(255, 255, 255, 0.8)
     font_size = 25
-    font_family = JetBrains Mono Light
-    position = 0, 0
-    halign = center
-    valign = center
-    shadow_passes = 1
+    font_family = JetBrains Mono Bold
+    position = 60, 280
+    halign = left
+    valign = bottom
 }
 
-# The Input Field (Tactical)
-input-field {
-    monitor =
-    size = 250, 50
-    outline_thickness = 2
-    dots_size = 0.2
-    dots_spacing = 0.2
-    dots_center = true
-    outer_color = rgba(255, 255, 255, 0.5)
-    inner_color = rgba(0, 0, 0, 0.5)
-    font_color = rgb(255, 255, 255)
-    fade_on_empty = false
-    placeholder_text = <i>SECURITY CLEARANCE...</i>
-    hide_input = false
-    position = 0, -100
-    halign = center
-    valign = center
-}
-
-# Status Label
+# 4. Status Indicator (Top Right)
 label {
     monitor =
     text = SYSTEM LOCKED
-    color = rgba(255, 255, 255, 0.6)
+    color = rgba(255, 255, 255, 0.4)
+    font_size = 15
+    font_family = JetBrains Mono Medium
+    position = -50, -50
+    halign = right
+    valign = top
+}
+
+# 5. Security Level (Top Right, under Status)
+label {
+    monitor =
+    text = SECURITY LEVEL: MAX
+    color = rgba(255, 255, 255, 0.4)
     font_size = 12
-    font_family = JetBrains Mono
-    position = 0, -150
+    font_family = JetBrains Mono Medium
+    position = -50, -25
+    halign = right
+    valign = top
+}
+
+# 6. User Greeting (Center, Small)
+label {
+    monitor =
+    text = HELLO, $USER
+    color = rgba(255, 255, 255, 0.6)
+    font_size = 14
+    font_family = JetBrains Mono Bold
+    position = 0, 60
     halign = center
     valign = center
+}
+
+# 7. Input Field (Minimalist Line)
+input-field {
+    monitor =
+    size = 300, 50
+    outline_thickness = 0
+    dots_size = 0.2
+    dots_spacing = 0.4
+    dots_center = true
+    inner_color = rgba(0, 0, 0, 0.0) # Transparent
+    font_color = rgb(255, 255, 255)
+    fade_on_empty = false
+    placeholder_text = <span foreground="##555555">ENTER PASSWORD</span>
+    hide_input = false
+    position = 0, 0
+    halign = center
+    valign = center
+    zindex = 10
 }
