--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -55,3 +55,5 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 
 # ───────────── utilities ─────────────
 bind = $mainMod SHIFT, V, exec, pavucontrol
+# Wofi Power Menu
+bind = $mainMod, X, exec, ~/.config/hypr/scripts/power-menu.sh
