--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -6,7 +6,7 @@ $mainMod = SUPER
 # ────────────── launch ──────────────
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, D, exec, wofi --show drun
-bind = $mainMod, E, exec, thunar
+bind = $mainMod, E, exec, kitty -e yazi
 
 # ─────────── window / system ─────────
 bind = $mainMod, Q, killactive
