--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -7,6 +7,8 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, E, exec, kitty -e yazi
+bind = $mainMod, B, exec, firefox
+
 
 # ─────────── window / system ─────────
 bind = $mainMod, Q, killactive
