--- a/config/hypr/keybinds.conf
+++ b/config/hypr/keybinds.conf
@@ -8,6 +8,7 @@ bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, E, exec, kitty -e yazi
 bind = $mainMod, B, exec, firefox
+bind = $mainMod, M, exec, kitty -e btop
 
 
 # ─────────── window / system ─────────
