--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -1,6 +1,6 @@
 # vim:ft=kitty
 
-## name:     Dark Knight (Tactical)
+## name:     V9 (Tactical)
 ## author:   v9mirza
 ## license:  MIT
 ## blurb:    Does it come in black?
