--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,5 +1,5 @@
 # Starship Prompt
-# Dark Knight – Tactical Monochrome
+# V9 – Tactical Monochrome
 # Optimized for Hyprland + Bash/Zsh
 
 add_newline = false
