--- a/config/hypr/general.conf
+++ b/config/hypr/general.conf
@@ -1,8 +1,10 @@
 general {
-  gaps_in = 5
-  gaps_out = 10
+  gaps_in = 4
+  gaps_out = 8
   border_size = 2
   layout = dwindle
-  col.active_border = rgb(ffffff) rgb(555555) 45deg
-  col.inactive_border = rgb(111111)
+  
+  # V9 Baseline Colors
+  col.active_border = rgb(5f7c8a)
+  col.inactive_border = rgb(2a2a2a)
 }
