--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -1,10 +1,12 @@
+# V9 Baseline Rules
+
+# Blur Guidelines: Blur Shell, Not Work
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
+
+layerrule = blur, wofi
+layerrule = ignorezero, wofi
+
+# Dialogs
 windowrulev2 = float, title:^(Open File|Save File|Choose File)$
 windowrulev2 = center, title:^(Open File|Save File|Choose File)$
-
-windowrulev2 = float, class:^(pavucontrol|nm-connection-editor)$
-windowrulev2 = center, class:^(pavucontrol|nm-connection-editor)$
-
-# Wofi Rules (Disabled for debugging)
-# layerrule = blur, wofi
-# layerrule = ignorezero, wofi
-# layerrule = dimaround, wofi
