--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -1,65 +1,52 @@
-# vim:ft=kitty
-
-## name:     V9 (Tactical)
+## name:     V9 Baseline
 ## author:   v9mirza
 ## license:  MIT
-## blurb:    Does it come in black?
+## blurb:    Monochrome + Steel Blue Accent
 
-# The basic colors
-foreground              #ffffff
-background              #000000
-selection_foreground    #ffffff
-selection_background    #444444
+# Core Colors
+background #0f0f0f
+foreground #d6d6d6
+selection_background #2a2a2a
+selection_foreground #d6d6d6
+url_color #5f7c8a
+cursor #5f7c8a
 
-# Cursor colors
-cursor                  #ffffff
-cursor_text_color       #000000
+# Tabs
+active_tab_background #5f7c8a
+active_tab_foreground #ffffff
+inactive_tab_background #1a1a1a
+inactive_tab_foreground #8a8a8a
 
-# URL underline color when hovering with mouse
-url_color               #aaaaaa
+# Color Palette (Muted/Monochrome Focus)
 
-# Kitty window border colors
-active_border_color     #aaaaaa
-inactive_border_color   #333333
-bell_border_color       #aaaaaa
+# Black
+color0 #1a1a1a
+color8 #2a2a2a
 
-# Tab bar colors
-active_tab_foreground   #000000
-active_tab_background   #aaaaaa
-inactive_tab_foreground #888888
-inactive_tab_background #111111
-tab_bar_background      #000000
+# Red (Muted)
+color1 #cc6666
+color9 #cc6666
 
-# The 16 terminal colors
+# Green (Muted)
+color2 #88aa77
+color10 #88aa77
 
-# black
-color0 #000000
-color8 #444444
+# Yellow (Muted)
+color3 #ddcc77
+color11 #ddcc77
 
-# red (Subtle Red for errors)
-color1 #cc3333
-color9 #ff4444
+# Blue (Steel Accent)
+color4 #5f7c8a
+color12 #5f7c8a
 
-# green (Tactical Green for success)
-color2  #44aa44
-color10 #55bb55
+# Magenta (Muted)
+color5 #aa88aa
+color13 #aa88aa
 
-# yellow (Muted Gold)
-color3  #aaaa44
-color11 #cccc55
+# Cyan (Muted)
+color6 #77aaaa
+color14 #77aaaa
 
-# blue (Slate Blue)
-color4  #4466aa
-color12 #6688cc
-
-# magenta (Greyish Purple)
-color5  #885588
-color13 #aa66aa
-
-# cyan (Steel Cyan)
-color6  #448888
-color14 #66aabb
-
-# white
-color7  #dddddd
+# White
+color7 #d6d6d6
 color15 #ffffff
