--- a/config/hypr/animations.conf
+++ b/config/hypr/animations.conf
@@ -1,19 +1,17 @@
 # animations.conf
-# Standard Hyprland Defaults (The "Good" ones)
+# V9 Baseline: Smooth, Ease-Out. No bounce.
 
 animations {
     enabled = true
 
-    # Default Bezier (The famous "overshot" curve)
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    # Smooth Ease-Out Curve
+    bezier = smoothOut, 0.16, 1, 0.3, 1
 
-    # Windows
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
+    animation = windows, 1, 5, smoothOut, popin 80%
+    animation = windowsOut, 1, 5, smoothOut, popin 80%
     
-    # Workspaces
-    animation = workspaces, 1, 6, default
+    animation = border, 1, 5, smoothOut
+    animation = fade, 1, 5, smoothOut
+    
+    animation = workspaces, 1, 4, smoothOut, slide
 }
