--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,6 +7,7 @@ env = XCURSOR_SIZE,24
 source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/input.conf
 source = ~/.config/hypr/general.conf
+source = ~/.config/hypr/decoration.conf
 source = ~/.config/hypr/keybinds.conf
 source = ~/.config/hypr/rules.conf
 source = ~/.config/hypr/autostart.conf
