--- a/config/hypr/decoration.conf
+++ b/config/hypr/decoration.conf
@@ -20,8 +20,11 @@ decoration {
     fullscreen_opacity = 1.0
 
     # Shadows (Soft, diffused)
-    drop_shadow = true
-    shadow_range = 15
-    shadow_render_power = 3
-    col.shadow = rgba(00000044)
+    # Shadows (Soft, diffused)
+    shadow {
+        enabled = true
+        range = 15
+        render_power = 3
+        color = rgba(00000044)
+    }
 }
