--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -1,11 +1,12 @@
 # V9 Baseline Rules
 
 # Blur Guidelines: Blur Shell, Not Work
-layerrule = blur, waybar
-layerrule = ignorezero, waybar
+layerrule = blur, ^(waybar)$
+layerrule = ignorezero, ^(waybar)$
 
-layerrule = blur, wofi
-layerrule = ignorezero, wofi
+layerrule = noanim, ^(wofi)$
+layerrule = blur, ^(wofi)$
+layerrule = ignorezero, ^(wofi)$
 
 # Dialogs
 windowrulev2 = float, title:^(Open File|Save File|Choose File)$
