--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -1,13 +1,27 @@
-# V9 Baseline Rules
+# V9 Baseline Rules (Safe Mode)
 
-# Blur Guidelines: Blur Shell, Not Work
-layerrule = blur, ^(waybar)$
-layerrule = ignorezero, ^(waybar)$
+# -----------------------------------------------------
+# Layer Rules (Blur the Shell)
+# -----------------------------------------------------
 
-layerrule = noanim, ^(wofi)$
-layerrule = blur, ^(wofi)$
-layerrule = ignorezero, ^(wofi)$
+# Waybar (Try simple namespace first)
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
 
-# Dialogs
+# Wofi
+layerrule = noanim, wofi
+layerrule = blur, wofi
+layerrule = ignorezero, wofi
+
+# -----------------------------------------------------
+# Window Rules (Floating Dialogs)
+# -----------------------------------------------------
+
+# Common File Dialogs
 windowrulev2 = float, title:^(Open File|Save File|Choose File)$
 windowrulev2 = center, title:^(Open File|Save File|Choose File)$
+windowrulev2 = size 800 600, title:^(Open File|Save File|Choose File)$
+
+# Common Utility Apps
+windowrulev2 = float, class:^(pavucontrol|nm-connection-editor|blueman-manager)$
+windowrulev2 = center, class:^(pavucontrol|nm-connection-editor|blueman-manager)$
