--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -4,14 +4,12 @@
 # Layer Rules (Blur the Shell)
 # -----------------------------------------------------
 
-# Waybar (Try simple namespace first)
+# Waybar
 layerrule = blur, waybar
-layerrule = ignorezero, waybar
 
 # Wofi
 layerrule = noanim, wofi
 layerrule = blur, wofi
-layerrule = ignorezero, wofi
 
 # -----------------------------------------------------
 # Window Rules (Floating Dialogs)
