--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -1,25 +1,30 @@
 # V9 Baseline Rules (Safe Mode)
+# Hyprland >= 0.52 compatible
+# -----------------------------------------------------
 
 # -----------------------------------------------------
 # Layer Rules (Blur the Shell)
 # -----------------------------------------------------
 
 # Waybar
-layerrule = blur, waybar
+layerrule = blur on, match:namespace waybar
+layerrule = ignore_alpha 1, match:namespace waybar
 
 # Wofi
-layerrule = noanim, wofi
-layerrule = blur, wofi
+layerrule = noanim 1, match:namespace wofi
+layerrule = blur on, match:namespace wofi
+layerrule = ignore_alpha 1, match:namespace wofi
+
 
 # -----------------------------------------------------
-# Window Rules (Floating Dialogs)
+# Window Rules (Floating Dialogs & Utilities)
 # -----------------------------------------------------
 
-# Common File Dialogs
-windowrulev2 = float, title:^(Open File|Save File|Choose File)$
-windowrulev2 = center, title:^(Open File|Save File|Choose File)$
-windowrulev2 = size 800 600, title:^(Open File|Save File|Choose File)$
+# File dialogs (toolkit-agnostic, title-safe)
+windowrulev2 = float, windowtype:^(dialog|utility)$
+windowrulev2 = center, windowtype:^(dialog|utility)$
+windowrulev2 = size 800 600, windowtype:^(dialog|utility)$
 
-# Common Utility Apps
+# Utility applications
 windowrulev2 = float, class:^(pavucontrol|nm-connection-editor|blueman-manager)$
 windowrulev2 = center, class:^(pavucontrol|nm-connection-editor|blueman-manager)$
