--- a/config/hypr/rules.conf
+++ b/config/hypr/rules.conf
@@ -11,7 +11,6 @@ layerrule = blur on, match:namespace waybar
 layerrule = ignore_alpha 1, match:namespace waybar
 
 # Wofi
-layerrule = noanim 1, match:namespace wofi
 layerrule = blur on, match:namespace wofi
 layerrule = ignore_alpha 1, match:namespace wofi
 
@@ -20,7 +19,7 @@ layerrule = ignore_alpha 1, match:namespace wofi
 # Window Rules (Floating Dialogs & Utilities)
 # -----------------------------------------------------
 
-# File dialogs (toolkit-agnostic, title-safe)
+# File dialogs (toolkit-agnostic, safe)
 windowrulev2 = float, windowtype:^(dialog|utility)$
 windowrulev2 = center, windowtype:^(dialog|utility)$
 windowrulev2 = size 800 600, windowtype:^(dialog|utility)$
